--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@ code span.ot { color: #007020; }
 <section class="main-content">
 <div id="assignments" class="section level2">
 <h2>Assignments</h2>
-<p><a href="Assignment_1.html">Assignment 1</a></p>
-<p><a href="https://amazon.com">Website Link</a></p>
+<p><a href="Assignment_1.html">Assignment 1</a> <a href="Assignment_2.html">Assignment 2</a></p>
 </div>
 </section>
 
