--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@ code span.ot { color: #007020; }
 <div id="assignments" class="section level2">
 <h2>Assignments</h2>
 <p><a href="Assignment_1.html">Assignment 1</a><br />
-<a href="Assignment_2.html">Assignment 2</a></p>
+<a href="Assignment_2.html">Assignment 2</a><br />
+<a href="Assignment_3.html">Assignment 3</a></p>
 </div>
 </section>
 
