--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@ code span.ot { color: #007020; }
 <a href="Assignment_2.html">Assignment 2</a><br />
 <a href="Assignment_3.html">Assignment 3</a></p>
 </div>
+<div id="weekly-assignments" class="section level2">
+<h2>Weekly Assignments</h2>
+<p><a href="WeeklyAssignment_1.html">Week 2</a></p>
+</div>
 </section>
 
 
