--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@ designed for their J-Term class, Reproducible Biology in R.</p>
 <p><a href="Assignment_1.html">Assignment 1</a><br />
 <a href="Assignment_2.html">Assignment 2</a><br />
 <a href="Assignment_3.html">Assignment 3</a><br />
-<a href="Assignment_4_and_5.html">Assignment 4 &amp; 5</a></p>
+<a href="Assignment_4_and_5.html">Assignment 4 &amp; 5</a><br />
+<a href="Assignment_6.html">Assignment 6</a></p>
 </div>
 <div id="weekly-assignments" class="section level2">
 <h2>Weekly Assignments</h2>
