--- a/index.html
+++ b/index.html
@@ -79,12 +79,15 @@ designed for their J-Term class, Reproducible Biology in R.</p>
 <a href="Assignment_3.html">Assignment 3</a><br />
 <a href="Assignment_4_and_5.html">Assignment 4 &amp; 5</a><br />
 <a href="Assignment_6.html">Assignment 6</a><br />
-<a href="Assignment_7.html">Assignment 7</a></p>
+<a href="Assignment_7.html">Assignment 7</a><br />
+<a href="Assignment_8.html">Assignment 8</a><br />
+<a href="Assignment_9.html">Assignment 9</a></p>
 </div>
 <div id="weekly-assignments" class="section level2">
 <h2>Weekly Assignments</h2>
 <p><a href="WeeklyAssignment_1.html">Week 2</a><br />
-<a href="WeeklyAssignment_2.html">Week 3</a></p>
+<a href="WeeklyAssignment_2.html">Week 3</a><br />
+<a href="Weekly_Assignment_3.html">Week 4</a></p>
 </div>
 </div>
 </section>
