--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ designed for their J-Term class, Reproducible Biology in R.</p>
 <p><a href="WeeklyAssignment_1.html">Week 2</a><br />
 <a href="WeeklyAssignment_2.html">Week 3</a><br />
 <a href="Weekly_Assignment_3.html">Week 4</a><br />
-<a href="Weekly_Assignmnet_4.html">Week 5</a></p>
+<a href="Weekly_Assignment_4.html">Week 5</a></p>
 </div>
 <div id="final-project" class="section level2">
 <h2>Final Project</h2>
